fix: Sticky filter form position on mobile

--- a/lyah/assets/css/filter-form.css
+++ b/lyah/assets/css/filter-form.css
@@ -5,7 +5,7 @@
 	padding-bottom: 16px;
 	/* CHROME BUG: When setting the top value on a sticky element, it is shifted left by 1px.
 	This seems to only happen at resolutions >= 1032px in width. */
-	top: 51px;
+	top: 44px;
 	position: sticky;
 	box-shadow: 0 8px 16px var(--header-color);
 	background-color: var(--header-color);
@@ -59,5 +59,6 @@
 	.filter-form {
 		flex-direction: row;
 		column-gap: 4px;
+		top: 51px;
 	}
 }
